--- a/Resort/Areas/Admin/Views/HomeAdmin/IndexAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/IndexAdmin.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "ReviewResortPleaseOK";
+    ViewData["Title"] = "Trang chủ Admin";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 <div>
