--- a/Resort/wwwroot/css/main.css
+++ b/Resort/wwwroot/css/main.css
@@ -460,3 +460,11 @@ iframe {
     opacity: 1;
   }
 }
+
+.show-password, .show-password2 {
+	position: absolute;
+	right:10px;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
+}
