--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
@@ -22,21 +22,19 @@
 	<!--===============================================================================================-->
 </head>
 <body>
-
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="~/img/img-01.png" alt="IMG">
 				</div>
-
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" action="Home" method="post">
 					<span class="login100-form-title">
 						LOGIN
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="text" id="email" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -44,7 +42,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" id="pass" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -52,7 +50,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+						<button class="login100-form-btn" type="submit">
 							Đăng nhập
 						</button>
 					</div>
