--- a/Resort/Areas/Admin/Views/HomeAdmin/IndexAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/IndexAdmin.cshtml
@@ -1,6 +1,9 @@
-﻿@{
+﻿@using Resort.Models;
+@model User
+@{
     ViewData["Title"] = "Trang chủ Admin";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+    
 }
 <div>
     OK
