--- a/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Resort.Models;
+@model User
+@{
+    var userDetail = ViewData["userDetail"] as UserDetail;
+}
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -103,7 +108,7 @@
                         <a class="nav-link py-0" data-coreui-toggle="dropdown" href="#" role="button"
                            aria-haspopup="true" aria-expanded="false">
                             <div class="avatar avatar-md">
-                                <img class="avatar-img" src="~/img/avatars/8.jpg" alt="user@email.com">
+                                <img class="avatar-img" src="~/img/avatars/@userDetail.ImageProfile" alt="user@email.com">
                             </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end pt-0">
