--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
@@ -19,6 +19,7 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="~/css/util.css">
 	<link rel="stylesheet" type="text/css" href="~/css/main.css">
+	<link rel="stylesheet" type="text/css" href="~/css/style.css"/>
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
@@ -65,7 +66,7 @@
 							Đăng nhập
 						</button>
 					</div>
-					<span class="d-block text-center my-4 text-muted"> Hoặc đăng nhập bằng</span>
+					<span class="d-block text-center my-4 text-muted">Hoặc đăng nhập bằng</span>
 					<div class="social-login text-center">
 						<a href="#" class="facebook">
 							<span class="bi bi-facebook"></span>
