--- a/Resort/wwwroot/css/style.css
+++ b/Resort/wwwroot/css/style.css
@@ -4646,7 +4646,13 @@ h1, h2, h3, h4, h5, h6 {
         margin-right: 10px
     }
 }
-
+.show-password, .show-password2 {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
 .blog_part .single-home-blog .card ul li span {
     margin-right: 10px;
     font-size: 12px
@@ -4739,3 +4745,52 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #7e0cf5;
     opacity: .2;
 }
+
+.social-login a {
+    text-decoration: none;
+    position: relative;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+    .social-login a span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+
+    .social-login a:hover {
+        color: #fff;
+    }
+
+    .social-login a.facebook {
+        background: #3b5998;
+    }
+
+        .social-login a.facebook:hover {
+            background: #344e86;
+        }
+
+    .social-login a.twitter {
+        background: #1da1f2;
+    }
+
+        .social-login a.twitter:hover {
+            background: #0d95e8;
+        }
+
+    .social-login a.google {
+        background: #ea4335;
+    }
+
+        .social-login a.google:hover {
+            background: #e82e1e;
+        }
