--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
@@ -33,10 +33,10 @@
 				</div>
 				<form class="login100-form validate-form" action="Home" method="post">
 					<span class="login100-form-title">
-						LOGIN
+						ĐĂNG NHẬP
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+					<div class="wrap-input100 validate-input" data-validate="email không đúng định dạng">
 						<input class="input100" type="text" id="email" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
@@ -53,7 +53,7 @@
 					</div>
 					<div class="d-flex mb-5 align-items-center">
 						<label class="control control--checkbox mb-0">
-							<span class="caption">Remember me</span>
+							<span class="caption">Ghi nhớ đăng nhập</span>
 							<input type="checkbox" checked="checked" />
 							<div class="control__indicator"></div>
 						</label>
