--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
@@ -30,7 +30,7 @@
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="~/img/img-01.png" alt="IMG">
 				</div>
-				<form class="login100-form validate-form" action="Home" method="post">
+				<form class="login100-form validate-form" action="AccountAdmin/Index" method="post">
 					<span class="login100-form-title">
 						LOGIN
 					</span>
