--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Đăng nhập</title>
@@ -57,7 +58,7 @@
 							<input type="checkbox" checked="checked" />
 							<div class="control__indicator"></div>
 						</label>
-						<span class="ml-auto"><a href="#" class="forgot-pass">Quên mật khẩu?</a></span>
+						<span class="ml-auto"><a class="forgot-pass" asp-action="ForGotPassword" >Quên mật khẩu?</a></span>
 					</div>
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn" type="submit">
@@ -74,10 +75,10 @@
 						</a>
 					</div>
 					<div class="text-center">
-						<a class="txt2">
-							Tạo tài khoản mới?
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						<a class="txt2" asp-action="AdminSignAccount">
+							Tạo tài khoản mới?<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
+						
 					</div>
 				</form>
 			</div>
