--- a/Resort/Areas/Admin/Views/HomeAdmin/ForGotPassword.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/ForGotPassword.cshtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Đăng ký</title>
+	<title>Đăng nhập</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
@@ -20,27 +20,19 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="~/css/util.css">
 	<link rel="stylesheet" type="text/css" href="~/css/main.css">
-	<link rel="stylesheet" type="text/css" href="~/css/style.css">
-	
+	<link rel="stylesheet" type="text/css" href="~/css/style.css" />
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
 </head>
 <body>
 	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
+		<div class="container-login10026">
+			<div class="wrap-login10026">
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						ĐĂNG KÝ
+						QUÊN MẬT KHẨU
 					</span>
-					<div class="wrap-input100 validate-input" data-validate="Tên không đúng định dạng">
-						<input class="input100" type="text" name="pass" placeholder="Họ tên">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-					</div>
 					<div class="wrap-input100 validate-input" data-validate="Email không đúng yêu cầu: ex@gmail.com">
 						<input class="input100" type="text" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
@@ -49,34 +41,14 @@
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input">
-						<select name="" id="" class="input100">
-							<option value="">Giới tính</option>
-							<option value="">Nam</option>
-							<option value="">Nữ</option>
-						</select>
-						<span class="symbol-input100">
-							<i class="bi bi-gender-ambiguous"></i>
-						</span>
-					</div>
-					<div class="wrap-input100 validate-input">
-						<input class="input100" type="date" name="date">
+						<input class="input100" type="text" placeholder="Mã">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="bi bi-cake2"></i>
+							<i class="fa fa-key" aria-hidden="true"></i>
 						</span>
-					</div>
-					<div class="wrap-input100 validate-input" data-validate="Mật khẩu phải gồm 6 ký tự bao gồm ký tự đặc biệt và số">
-						<input class="input100" type="password" name="pass" placeholder="Mật khẩu" id="ipnPassword">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-						<div class="show-password">
-							<i class="fa fa-eye" aria-hidden="true" id="btnPassword"></i>
-						</div>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Mật khẩu không trùng">
-						<input class="input100" type="password" name="pass" placeholder="Nhập lại mật khẩu" id="ipnPassword2">
+						<input class="input100" type="password" name="pass" placeholder="Mật khẩu mới" id="ipnPassword2">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -87,28 +59,17 @@
 					</div>
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Đăng ký
+							Lấy lại mật khẩu
 						</button>
 					</div>
-
-					<div class="text-center p-t-25">
-						<a class="txt2" asp-action="AdminLoginAccount">
-							Đã có tài khoản? Đăng nhập ngay
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-						</a>
-					</div>
-					<div class="social-login text-center p-t-15">
-						<a href="#" class="facebook">
-							<span class="bi bi-facebook"></span>
-						</a>
-						<a href="#" class="google">
-							<span class="bi bi-google"></span>
-						</a>
+					<div class="d-flex mb-5 align-items-center">
+						<label class="m-3">
+							<span class="caption"></span>
+							<a asp-action="AdminLoginAccount">Đăng nhập</a>
+						</label>
+						<span class="ml-auto m-3"><a class="forgot-pass" asp-action="AdminSignAccount">Đăng ký</a></span>
 					</div>
 				</form>
-				<div class="login100-pic js-tilt" data-tilt>
-					<img src="~/img/img-01.png" alt="IMG">
-				</div>
 			</div>
 		</div>
 	</div>
@@ -128,36 +89,6 @@
 	<script>
 		$('.js-tilt').tilt({
 			scale: 1.1
-		})
-		const ipnElement = document.querySelector('#ipnPassword')
-		const btnElement = document.querySelector('#btnPassword')
-		var icon1 = document.querySelector('.show-password i')
-
-		const ipnElement2 = document.querySelector('#ipnPassword2')
-		const btnElement2 = document.querySelector('#btnPassword2')
-		var icon2 = document.querySelector('.show-password2 i')
-
-
-		btnElement.addEventListener('click', function () {
-			const currentType = ipnElement.getAttribute('type')
-			if (currentType === 'password') {
-				ipnElement.setAttribute('type', 'text');
-				icon1.className = "fa fa-eye-slash";
-			} else {
-				ipnElement.setAttribute('type', 'password');
-				icon1.className = "fa fa-eye";
-			}
-		})
-
-		btnElement2.addEventListener('click', function () {
-			const currentType2 = ipnElement2.getAttribute('type')
-			if (currentType2 === 'password') {
-				ipnElement2.setAttribute('type', 'text');
-				icon2.className = "fa fa-eye-slash";
-			} else {
-				ipnElement2.setAttribute('type', 'password');
-				icon2.className = "fa fa-eye";
-			}
 		})
 	</script>
 	<!--===============================================================================================-->
