--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
@@ -49,6 +49,16 @@
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input">
+						<input class="input100" type="text" placeholder="Mã">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-key" aria-hidden="true"></i>
+						</span>
+						<div class="show-password">
+							<button class="btn">Gửi mã</button>
+						</div>
+					</div>
+					<div class="wrap-input100 validate-input">
 						<select name="" id="" class="input100">
 							<option value="">Giới tính</option>
 							<option value="">Nam</option>
