--- a/Resort/Views/Home/ForGotPassword.cshtml
+++ b/Resort/Views/Home/ForGotPassword.cshtml
@@ -1,4 +1,8 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    ViewData["Title"] = "ForGotPassword";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,9 +72,9 @@
 					<div class="d-flex mb-5 align-items-center">
 						<label class="m-3">
 							<span class="caption"></span>
-							<a asp-action="AdminLoginAccount">Đăng nhập</a>
+							<a asp-action="Login" asp-controller="Home">Đăng nhập</a>
 						</label>
-						<span class="ml-auto m-3"><a class="forgot-pass" asp-action="AdminSignAccount">Đăng ký</a></span>
+						<span class="ml-auto m-3"><a class="forgot-pass" asp-action="Sign" asp-controller="Home">Đăng ký</a></span>
 					</div>
 				</form>
 			</div>
@@ -99,3 +103,5 @@
 
 </body>
 </html>
+
+
