--- a/Resort/Views/Home/Login.cshtml
+++ b/Resort/Views/Home/Login.cshtml
@@ -1,27 +1,22 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+	ViewData["Title"] = "Đăng nhập";
+	Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>@ViewData["Title"]</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="~/img/icons/favicon.ico" />
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="~/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="~/vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="~/vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="~/css/util.css">
 	<link rel="stylesheet" type="text/css" href="~/css/main.css">
-	<link rel="stylesheet" type="text/css" href="~/css/style.css"/>
-	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="~/css/util.css">
+	<link rel="stylesheet" type="text/css" href="~/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="~/vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" href="~/vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="~/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="icon" type="image/png" href="~/img/icons/favicon.ico" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
 </head>
@@ -58,7 +53,7 @@
 							<input type="checkbox" checked="checked" />
 							<div class="control__indicator"></div>
 						</label>
-						<span class="ml-auto"><a class="forgot-pass" asp-action="ForGotPassword" >Quên mật khẩu?</a></span>
+						<span class="ml-auto"><a class="forgot-pass" asp-action="ForGotPassword" asp-controller="Home">Quên mật khẩu?</a></span>
 					</div>
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn" type="submit">
@@ -75,10 +70,10 @@
 						</a>
 					</div>
 					<div class="text-center">
-						<a class="txt2" asp-action="AdminSignAccount">
+						<a class="txt2" asp-action="Sign" asp-controller="Home">
 							Tạo tài khoản mới?<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
-						
+
 					</div>
 				</form>
 			</div>
