--- a/Resort/Views/Home/Login.cshtml
+++ b/Resort/Views/Home/Login.cshtml
@@ -21,6 +21,11 @@
 
 </head>
 <body>
+	<style>
+		.forgot-pass a:hover{
+			text-decoration: none;
+		}
+	</style>
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
