--- a/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -46,25 +46,23 @@
                 </a>
                 <ul class="nav-group-items">
                     <li class="nav-item"><a class="nav-link" asp-action="CreateResort" asp-controller="HomeAdmin">Thêm khu nghỉ mát</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/select.html"> Select</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/checks-radios.html"> Checks and radios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/range.html"> Range</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/input-group.html"> Input group</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/floating-labels.html"> Floating labels</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/layout.html"> Layout</a></li>
-                    <li class="nav-item"><a class="nav-link" href="forms/validation.html"> Validation</a></li>
+                    <li class="nav-item"><a class="nav-link"> Khu nghỉ mát chi tiết</a></li>
+                    <li class="nav-item"><a class="nav-link" href="forms/checks-radios.html"> Dịch vụ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="forms/range.html"> Tiện ích</a></li>
+                    <li class="nav-item"><a class="nav-link" href="forms/range.html"> Loại phòng</a></li>
                 </ul>
             </li>
             <li class="nav-group">
                 <a class="nav-link nav-group-toggle" href="#">
                     <i class="bi bi-bell"></i>
-                    Thông báo
+                    Quản lý tài khoản người dùng
                 </a>
                 <ul class="nav-group-items">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span class="nav-icon"></span>
-                            Alerts
+                       
+                        <a class="nav-link align-center" href="#">
+                        <i class="bi bi-file-earmark-person"></i>
+                           Tài khoản người dùng
                         </a>
                     </li>
                 </ul>
