--- a/Resort/Areas/Admin/Views/HomeAdmin/IndexAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/IndexAdmin.cshtml
@@ -1,7 +1,7 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Trang chủ Admin";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<div>
-    OK
-    </div>
+
+<h1>Siuuu</h1>
