--- a/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -58,9 +58,8 @@
                     Quản lý tài khoản người dùng
                 </a>
                 <ul class="nav-group-items">
-                    <li class="nav-item">
-                       
-                        <a class="nav-link align-center" href="#">
+                    <li class="nav-item" >
+                        <a class="nav-link align-center" asp-action="UserManagent" asp-controller="HomeAdmin">
                         <i class="bi bi-file-earmark-person"></i>
                            Tài khoản người dùng
                         </a>
