--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminLoginAccount.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model string
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,7 +33,7 @@
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="~/img/img-01.png" alt="IMG">
 				</div>
-				<form class="login100-form validate-form" action="AccountAdmin/Index" method="post">
+				<form class="login100-form validate-form" action="AccountAdmin/Login" method="post">
 					<span class="login100-form-title">
 						ĐĂNG NHẬP
 					</span>
