--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
@@ -1,4 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Resort.Models
+@model User
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,43 +33,43 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" asp-action="Sign" asp-controller="AccountAdmin" method="post">
 					<span class="login100-form-title">
 						ĐĂNG KÝ
 					</span>
 					<div class="wrap-input100 validate-input" data-validate="Tên không đúng định dạng">
-						<input class="input100" type="text" name="pass" placeholder="Họ tên">
+						<input class="input100" type="text" name="name" id="name" placeholder="Họ tên">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Email không đúng yêu cầu: ex@gmail.com">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="text" name="email" id="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 					</div>
-					<div class="wrap-input100 validate-input">
-						<select name="" id="" class="input100">
+					<div class="wrap-input100">
+						<select class="input100" id="gender" name="gender">
 							<option value="">Giới tính</option>
-							<option value="">Nam</option>
-							<option value="">Nữ</option>
+							<option value="Nam">Nam</option>
+							<option value="Nữ">Nữ</option>
 						</select>
 						<span class="symbol-input100">
 							<i class="bi bi-gender-ambiguous"></i>
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input">
-						<input class="input100" type="date" name="date">
+						<input class="input100" type="date" name="date" id="date">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="bi bi-cake2"></i>
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Mật khẩu phải gồm 6 ký tự bao gồm ký tự đặc biệt và số">
-						<input class="input100" type="password" name="pass" placeholder="Mật khẩu" id="ipnPassword">
+						<input class="input100" type="password" name="pass" placeholder="Mật khẩu" id="pass">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -76,7 +79,7 @@
 						</div>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Mật khẩu không trùng">
-						<input class="input100" type="password" name="pass" placeholder="Nhập lại mật khẩu" id="ipnPassword2">
+						<input class="input100" type="password" name="pass2" placeholder="Nhập lại mật khẩu" id="pass2">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -86,13 +89,13 @@
 						</div>
 					</div>
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+						<button class="login100-form-btn" type="submit">
 							Đăng ký
 						</button>
 					</div>
 
 					<div class="text-center p-t-25">
-						<a class="txt2" asp-action="AdminLoginAccount">
+						<a class="txt2" asp-action="AdminLoginAccount" asp-controller="HomeAdmin">
 							Đã có tài khoản? Đăng nhập ngay
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
@@ -160,6 +163,31 @@
 			}
 		})
 	</script>
+
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			var currentUrl ="@Context.Request.Path.ToString()";
+				$("#gender").change(function () {
+				var selectedValue = $("#gender").val();
+					$.ajax({
+						url: currentUrl,
+						type: 'POST',
+						data: { selectedValue: selectedValue},
+						success: function (result) {
+							update(currentUrl,selectedValue);
+				},
+				error: function () {
+					alert("Lỗi rồi");
+				}
+			});
+		});
+		function update(currentUrl,selectedValue){
+			alert(selectedValue);
+		}
+	});
+	</script>
+
 	<!--===============================================================================================-->
 	<script src="~/js/loginMain.js"></script>
 
