--- a/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Resort/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -12,6 +12,11 @@
     <title>@ViewData["title"]</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
     <meta name="theme-color" content="#ffffff">
     <!-- Vendors styles-->
     <link rel="stylesheet" href="~/css/simplebarVdn.css">
@@ -62,7 +67,7 @@
                     <li class="nav-item" >
                         <a class="nav-link align-center" asp-action="UserManagent" asp-controller="HomeAdmin">
                         <i class="bi bi-file-earmark-person"></i>
-                           Tài khoản người dùng
+                           Danh sách người dùng
                         </a>
                     </li>
                 </ul>
@@ -143,9 +148,9 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb my-0 ms-2">
                         <li class="breadcrumb-item">
-                            <!-- if breadcrumb is single--><span>Home</span>
+                            <!-- if breadcrumb is single--><span>Trang chủ</span>
                         </li>
-                        <li class="breadcrumb-item active"><span>Dashboard</span></li>
+                        <li class="breadcrumb-item active"><span>Bảng điều khiển</span></li>
                     </ol>
                 </nav>
             </div>
@@ -161,7 +166,7 @@
     <script src="~/js/coreui.bundle.min.js"></script>
     <script src="~/js/simplebar.min.js"></script>
 
-    <!-- <script src="js/main.js"></script> -->
+     <script src="~/js/main.js"></script>
     <script>
         function sortTable(n) {
             var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
