--- a/Resort/Areas/Admin/Views/HomeAdmin/CreateResort.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/CreateResort.cshtml
@@ -65,3 +65,76 @@
 }
 </style>
 
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$("#province").change(function(){
+				var idprovince=$("#province").val();
+				$.ajax({
+					url:"District",
+					tpye:"GET",
+					data:{id:idprovince},
+					success:function(data){
+						document.getElementById('district_select').hidden=false;
+						var start=0;
+						var end=0;
+						for(let i=0;i<data.length;i++){
+							if(data[i]=="{"){
+								start=i;
+							}
+							if(data[i]=="}"){
+								end=i+1;
+							}
+							if(start!=0 && end!=0){
+								var obj=data.slice(start,end);
+								var term=JSON.parse(obj);
+								start=0;
+								end=0;
+
+								var dis = document.getElementById("district");
+								var option = document.createElement("option");
+								option.text = term.Name;
+								option.value = term.IdDistrict;
+								dis.add(option);
+							}
+						}
+					}
+				});
+			});
+			$("#district").change(function(){
+				var iddistrict=$("#district").val();
+				$.ajax({
+					url:"Commune",
+					tpye:"GET",
+					data:{id:iddistrict},
+					success:function(data){
+						document.getElementById('commune_select').hidden=false;
+						var start=0;
+						var end=0;
+						for(let i=0;i<data.length;i++){
+							if(data[i]=="{"){
+								start=i;
+							}
+							if(data[i]=="}"){
+								end=i+1;
+							}
+							if(start!=0 && end!=0){
+								var obj=data.slice(start,end);
+								var term=JSON.parse(obj);
+								start=0;
+								end=0;
+
+								var com = document.getElementById("commune");
+								var option = document.createElement("option");
+								option.text = term.Name;
+								option.value = term.IdCommune;
+								com.add(option);
+							}
+						}
+					}
+				})
+			});
+		});
+	</script>
+
+
