update db and fix repo user

--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
@@ -183,7 +183,7 @@
 			});
 		});
 		function update(currentUrl,selectedValue){
-			alert(selectedValue);
+			alert(selectedValue
 		}
 	});
 	</script>
