--- a/Resort/Areas/Admin/Views/HomeAdmin/ForGotPassword.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/ForGotPassword.cshtml
@@ -34,7 +34,7 @@
 						QUÊN MẬT KHẨU
 					</span>
 					<div class="wrap-input100 validate-input" data-validate="Email không đúng yêu cầu: ex@gmail.com">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="text" name="email" id="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -47,7 +47,7 @@
 							<i class="fa fa-key" aria-hidden="true"></i>
 						</span>
 						<div class="show-password">
-							<button class="btn">Gửi mã</button>
+							<button id="send" class="btn">Gửi mã</button>
 						</div>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Mật khẩu không trùng">
@@ -99,3 +99,23 @@
 
 </body>
 </html>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("#send").click(function(){
+			var emailTo=$("#email").val();
+			$.ajax({
+				url:"SendCode",
+				type:"POST",
+				data:{email:emailTo},
+				success:function(data){
+					var point=data.indexOf("+");
+					var noti=data.slice(0,point);
+					var code=data.slice(point+2,data.length);
+					alert(noti);
+				}
+			})
+		});
+	});
+</script>
