--- a/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/AdminSignAccount.cshtml
@@ -37,6 +37,7 @@
 					<span class="login100-form-title">
 						ĐĂNG KÝ
 					</span>
+					<!--Họ tên-->
 					<div class="wrap-input100 validate-input" data-validate="Tên không đúng định dạng">
 						<input class="input100" type="text" name="name" id="name" placeholder="Họ tên">
 						<span class="focus-input100"></span>
@@ -44,6 +45,7 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
+					<!--Email-->
 					<div class="wrap-input100 validate-input" data-validate="Email không đúng yêu cầu: ex@gmail.com">
 						<input class="input100" type="text" name="email" id="email" placeholder="Email">
 						<span class="focus-input100"></span>
@@ -51,6 +53,18 @@
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 					</div>
+					<!--Mã-->
+					<div class="wrap-input100 validate-input">
+						<input class="input100" type="text" placeholder="Mã">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-key" aria-hidden="true"></i>
+						</span>
+						<div class="show-password">
+							<button id="send" class="btn">Gửi mã</button>
+						</div>
+					</div>
+					<!--Giới tính-->
 					<div class="wrap-input100">
 						<select class="input100" id="gender" name="gender">
 							<option value="">Giới tính</option>
@@ -61,6 +75,7 @@
 							<i class="bi bi-gender-ambiguous"></i>
 						</span>
 					</div>
+					<!--Ngày sinh-->
 					<div class="wrap-input100 validate-input">
 						<input class="input100" type="date" name="date" id="date">
 						<span class="focus-input100"></span>
@@ -68,6 +83,7 @@
 							<i class="bi bi-cake2"></i>
 						</span>
 					</div>
+					<!--Mật khẩu-->
 					<div class="wrap-input100 validate-input" data-validate="Mật khẩu phải gồm 6 ký tự bao gồm ký tự đặc biệt và số">
 						<input class="input100" type="password" name="pass" placeholder="Mật khẩu" id="pass">
 						<span class="focus-input100"></span>
