--- a/Resort/Areas/Admin/Views/HomeAdmin/ForGotPassword.cshtml
+++ b/Resort/Areas/Admin/Views/HomeAdmin/ForGotPassword.cshtml
@@ -118,4 +118,17 @@
 			})
 		});
 	});
+	const ipnElement2 = document.querySelector('#ipnPassword2')
+	const btnElement2 = document.querySelector('#btnPassword2')
+	var icon2 = document.querySelector('.show-password2 i')
+	btnElement2.addEventListener('click', function () {
+		const currentType2 = ipnElement2.getAttribute('type')
+		if (currentType2 === 'password') {
+			ipnElement2.setAttribute('type', 'text');
+			icon2.className = "fa fa-eye-slash";
+		} else {
+			ipnElement2.setAttribute('type', 'password');
+			icon2.className = "fa fa-eye";
+		}
+	})
 </script>
